# curricerto

./: .env.example  .gitignore  diagrama.mmd  manage.py  package-lock.json  package.json  pyproject.toml
.zed/: settings.json
accounts/: urls.py  views.py
accounts/templates/registration/: login.html  register.html
curricerto/: api.py  asgi.py  settings.py  urls.py  wsgi.py
curricerto/templates/: base.html  home.html
curriculos/: admin.py  api.py  schemas.py
curriculos/migrations/: 0001_initial.py
curriculos/models/: __init__.py  certificacao.py  choices.py  experiencia.py  formacao.py  habilidade.py  projeto.py  user_owned.py
curriculos/routes/: certificacao.py  experiencia.py  formacao.py  habilidade.py  projeto.py
